--- a/data/files/apps/facebook/config/app.yml
+++ b/data/files/apps/facebook/config/app.yml
@@ -3,6 +3,12 @@ all:
     app_id:       
     app_secret:   
     app_url:      
+    homepage:     '@homepage'
+    app_data:     'from_auth'
+    like_gate:
+      enabled:    true
+      module:     sfFacebookAppTab
+      action:     like
 
 prod:
   facebook:
