Fixing (temp?) bug with FB auth redirect

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -8,3 +8,7 @@ tab:
 auth:
   url:   /auth
   param: { module: sfFacebookAppTab, action: auth }
+  
+redirect:
+  url:   /redirect
+  param: { module: sfFacebookAppTab, action: redirect }
