Including new Symfony debug stuff for Facebook and setting some sensible defaults. Deprecating all the methods in sfFacebookAppUtil, should be updated to encapsulate SDK methods (as per #7)

--- a/config/app.yml
+++ b/config/app.yml
@@ -1,17 +1,11 @@
 all:
   facebook:
-    app_id:       
-    app_secret:   
-    app_url:      
+    app_id:       ~
+    app_secret:   ~
+    app_url:      ~
     homepage:     '@homepage'
     app_data:     'from_auth'
     like_gate:
       enabled:    true
       module:     sfFacebookAppTab
       action:     like
-
-prod:
-  facebook:
-    app_id:       
-    app_secret:   
-    app_url:      
