Refactoring FBUtil to use the Facebook SDK
- using signed_request parsing - getting user data (now uses config to
get fields) - uses session if available

--- a/config/app.yml
+++ b/config/app.yml
@@ -3,8 +3,13 @@ all:
     app_id:       ~
     app_secret:   ~
     app_url:      ~
+    
     homepage:     '@homepage'
     app_data:     'from_auth'
+    app_scope:    ~
+    
+    user_data:    [ first_name, last_name ]   # defaults - fb_uid also included
+    
     like_gate:
       enabled:    true
       module:     sfFacebookAppTab
