--- a/config/routing.yml
+++ b/config/routing.yml
@@ -9,9 +9,9 @@ auth:
   url:   /auth
   param: { module: sfFacebookAppTab, action: auth }
   
-fb_like:
-  url:   /like
-  param: { module: sfFacebookAppTab, action: like }
+# fb_like:
+#   url:   /like
+#   param: { module: sfFacebookAppTab, action: like }
   
 redirect:
   url:   /redirect
