added redirect url option so app_data gets appended to the end of the url properly depending on if it already contains a query string or not

--- a/config/app.yml
+++ b/config/app.yml
@@ -3,6 +3,7 @@ all:
     app_id:       ~
     app_secret:   ~
     app_url:      ~
+    # redirect_url: ~
     
     homepage:     '@homepage'
     app_data:     'from_auth'
