--- a/data/files/apps/frontend/config/view.yml
+++ b/data/files/apps/frontend/config/view.yml
@@ -12,7 +12,7 @@ default:
     #language:     en
     #robots:       index, follow
 
-  stylesheets:    [main.css]
+  stylesheets:    [screen.css]
 
   javascripts:
     - https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools-yui-compressed.js: { position: first }
