--- a/config/routing.yml
+++ b/config/routing.yml
@@ -13,7 +13,7 @@ auth_scope:
   url:   /auth/:scope
   param: { module: sfFacebookAppTab, action: authAdditional }
   
-# fb_like:   # generated automatically by filter and config
+# fb_like:   # add with correct parameters if have removed default routes and want a working like gate ;)
 #   url:   /like
 #   param: { module: sfFacebookAppTab, action: like }
   
