--- a/data/files/apps/frontend/config/filters.yml
+++ b/data/files/apps/frontend/config/filters.yml
@@ -7,6 +7,8 @@ security:  ~
 # insert your own filters here
 sfFacebookApp:
   class:    sfFacebookSignedRequestFilter
-
+sf_google_analytics_plugin:
+  class: sfGoogleAnalyticsFilter
+  
 cache:     ~
 execution: ~
