Adding frontend prod/staging logging, staging controller, cookie name, and error pages to installer

--- a/data/files/apps/frontend/config/settings.yml
+++ b/data/files/apps/frontend/config/settings.yml
@@ -4,7 +4,12 @@
 prod:
   .settings:
     no_script_name:         true
-    logging_enabled:        false
+    logging_enabled:        true
+
+staging:
+  .settings:
+    no_script_name:         true
+    logging_enabled:        true
 
 dev:
   .settings:
