--- a/config/routing.yml
+++ b/config/routing.yml
@@ -4,6 +4,10 @@
 tab:
   url:   /tab
   param: { module: sfFacebookAppTab, action: tab }
+ 
+canvas:
+  url:   /canvas/
+  param: { module: sfFacebookAppTab, action: canvas }
   
 auth:
   url:   /auth
@@ -13,9 +17,9 @@ auth_scope:
   url:   /auth/:scope
   param: { module: sfFacebookAppTab, action: authAdditional }
   
-# fb_like:   # add with correct parameters if have removed default routes and want a working like gate ;)
-#   url:   /tab/like
-#   param: { module: sfFacebookAppTab, action: like }
+fb_like:
+   url:   /tab/like
+   param: { module: sfFacebookAppTab, action: like }
   
 redirect:
   url:   /redirect
